--- a/index.html
+++ b/index.html
@@ -217,11 +217,41 @@
                         </div>
                     </div>
                 </div>
+                </div>
+                </section>
 
-            </div>
-        </section>
+                <!-- UBICACIÓN SECRETA -->
+                <section class="py-20 bg-[#F4F0F7] relative overflow-hidden reveal">
+                <div class="max-w-4xl mx-auto px-6 text-center">
+                <div class="mb-12 relative inline-block">
+                    <div class="absolute inset-0 bg-[#8BA889] rounded-full blur-2xl opacity-20 animate-pulse"></div>
+                    <svg class="w-16 h-16 mx-auto olive-accent relative z-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                    </svg>
+                </div>
+                <h2 class="serif italic text-4xl md:text-6xl accent-color mb-6">El Escenario Secreto</h2>
+                <p class="text-gray-500 font-light tracking-[0.2em] uppercase text-xs mb-12">Donde nuestra historia se hará eterna</p>
 
-        <!-- PIE DE PÁGINA MISTERIOSO -->
+                <div class="relative bg-white/50 backdrop-blur-sm p-8 md:p-12 rounded-sm border border-white inline-block w-full max-w-2xl shadow-xl overflow-hidden">
+                    <div class="absolute top-0 left-0 w-full h-[2px] bg-gradient-to-r from-transparent via-[#8BA889] to-transparent animate-scan"></div>
+
+                    <div class="space-y-6">
+                        <p class="serif italic text-xl md:text-2xl text-gray-400 select-none filter blur-[4px]">32° 53' 45.2" S 68° 49' 12.8" W</p>
+                        <div class="flex justify-center space-x-2 opacity-30">
+                            <span class="w-2 h-2 rounded-full bg-[#5D3F75]"></span>
+                            <span class="w-2 h-2 rounded-full bg-[#5D3F75]"></span>
+                            <span class="w-2 h-2 rounded-full bg-[#5D3F75]"></span>
+                        </div>
+                        <p class="text-gray-600 font-light text-sm md:text-base px-4">Un rincón escondido entre viñedos y susurros del viento... Solo los corazones preparados encontrarán el camino.</p>
+                    </div>
+
+                    <button onclick="revelarMensajeUbicacion()" class="mt-10 btn-comencemos !border-[#8BA889] !text-[#8BA889] hover:!bg-[#8BA889] hover:!text-white">Explorar Coordenadas</button>
+                </div>
+                </div>
+                </section>
+
+                <!-- PIE DE PÁGINA MISTERIOSO -->
         <div class="intriga-blur py-20 md:py-32 bg-lavender-soft">
             <section class="text-center px-4">
                 <h2 class="serif italic text-3xl md:text-4xl opacity-30">Memorias</h2>
