Layout final: Damas, Testigos, Caballeros y Ubicación Secreta

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
 
         .reveal { opacity: 0; transform: translateY(30px); transition: all 1s ease; }
         .reveal.active { opacity: 1; transform: translateY(0); }
+
+        @keyframes scan {
+            0% { transform: translateY(-100%); opacity: 0; }
+            50% { opacity: 1; }
+            100% { transform: translateY(1000%); opacity: 0; }
+        }
+        .animate-scan {
+            animation: scan 3s infinite linear;
+        }
     </style>
 </head>
 <body class="text-gray-800">
