Layout final: Damas, Testigos, Caballeros y Ubicación Secreta con efectos

--- a/index.html
+++ b/index.html
@@ -346,6 +346,10 @@
             }
         }
 
+        function revelarMensajeUbicacion() {
+            alert("El mapa se está dibujando... el destino aparecerá pronto en tu brújula.");
+        }
+
         function reveal() {
             var reveals = document.querySelectorAll(".reveal");
             for (var i = 0; i < reveals.length; i++) {
