Actualizar texto de ubicación secreta eliminando mención a viñedos

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             <span class="w-2 h-2 rounded-full bg-[#5D3F75]"></span>
                             <span class="w-2 h-2 rounded-full bg-[#5D3F75]"></span>
                         </div>
-                        <p class="text-gray-600 font-light text-sm md:text-base px-4">Un rincón escondido entre viñedos y susurros del viento... Solo los corazones preparados encontrarán el camino.</p>
+                        <p class="text-gray-600 font-light text-sm md:text-base px-4">Un rincón escondido donde el destino nos aguarda... Solo los corazones preparados encontrarán el camino.</p>
                     </div>
 
                     <button onclick="revelarMensajeUbicacion()" class="mt-10 btn-comencemos !border-[#8BA889] !text-[#8BA889] hover:!bg-[#8BA889] hover:!text-white">Explorar Coordenadas</button>
