Personalizar texto Damas de Honor mencionando hermana y cuñada

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                         <div class="carta-bg p-6 rounded-sm relative">
                             <h2 class="serif italic text-2xl accent-color text-center mb-6">A mis Damas</h2>
                             <div class="text-gray-700 font-light text-sm leading-relaxed space-y-4 text-justify serif">
-                                <p>A mis amigas de siempre, a las que han estado en cada lágrima y cada carcajada. Su presencia hoy es el regalo más grande para mi corazón.</p>
-                                <p>Gracias por caminar a mi lado en esta nueva etapa. Sin ustedes, este camino no sería tan brillante.</p>
+                                <p>A mis amigas de siempre y a mi familia de corazón. Tener a mi hermana y a mi cuñada entre mis damas hace que este día sea aún más especial.</p>
+                                <p>Su presencia hoy es el regalo más grande para mi alma. Gracias por caminar a mi lado en cada lágrima, en cada carcajada y en esta nueva etapa que hoy comienza.</p>
                             </div>
                             <div class="grid grid-cols-2 gap-4 mt-8 text-center">
                                 <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#B19CD9] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.02 (3).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Dama 1]</h3></div>
