Actualizar texto Damas de Honor: cambiar presencia por existencia y quitar hoy

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="carta-bg p-6 rounded-sm relative">
                             <h2 class="serif italic text-2xl accent-color text-center mb-6">A mis Damas</h2>
                             <div class="text-gray-700 font-light text-sm leading-relaxed space-y-4 text-justify serif">
-                                <p>A mis amigas del alma y mi familia de corazón. Su presencia hoy es el regalo más grande para mi alma.</p>
+                                <p>A mis amigas del alma y mi familia de corazón. Su existencia es el regalo más grande para mi alma.</p>
                                 <p>Gracias por caminar a mi lado en cada lágrima, en cada carcajada y en esta nueva etapa que hoy comienza.</p>
                             </div>
                             <div class="grid grid-cols-2 gap-4 mt-8 text-center">
