Agregar a Agostina Sobisch a la lista de Damas de Honor

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                                 <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#B19CD9] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.02 (2).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">Melanie Alonso</h3></div>
                                 <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#B19CD9] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.03.jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">Camila Gellner</h3></div>
                                 <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#B19CD9] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.26.16.jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">Milagros Bustos</h3></div>
+                                <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#B19CD9] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.02 (3).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">Agostina Sobisch</h3></div>
                             </div>
                         </div>
                     </div>
