Actualizar Caballeros de Honor con descripción personalizada y 9 nombres

--- a/index.html
+++ b/index.html
@@ -221,14 +221,22 @@
                     </div>
                     <div id="carta-abierta-caballeros" style="display:none; opacity:0; transition: opacity 1s ease;">
                         <div class="carta-bg p-6 rounded-sm relative">
-                            <h2 class="serif italic text-2xl accent-color text-center mb-6">A mis Caballeros</h2>
+                            <h2 class="serif italic text-2xl accent-color text-center mb-6">Mis Caballeros</h2>
                             <div class="text-gray-700 font-light text-sm leading-relaxed space-y-4 text-justify serif">
-                                <p>A mis hermanos de la vida, los que han estado en las buenas y en las no tan buenas. Gracias por acompañarme en el paso más importante.</p>
-                                <p>Que su presencia hoy sea el inicio de muchas más historias compartidas. ¡Gracias por estar!</p>
+                                <p>"Dicen que la familia es la que te toca, pero también es la que uno elige en el camino. Ustedes son esa elección constante. Son los que han estado en las buenas, en las malas y en esas anécdotas que solo nosotros entendemos. Más que amigos, son mis pilares."</p>
+                                <p>"Hoy, frente al paso más importante que voy a dar, no me imagino el camino hacia el altar sin tenerlos a mis espaldas. Su presencia como mis Caballeros de Honor es el reflejo del respeto y la admiración que siento por cada uno de ustedes."</p>
+                                <p>"Gracias por aceptar ser parte de mi guardia de honor, por cuidar mis pasos y por celebrar conmigo este capítulo. Es un honor para mí que me acompañen."</p>
                             </div>
                             <div class="grid grid-cols-2 gap-4 mt-8 text-center">
-                                <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#5D3F75] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.02.jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Caballero 1]</h3></div>
-                                <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#5D3F75] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.03.jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Caballero 2]</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Santino Sobisch</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Ignacio Pedrosa</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Martin Saleme</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Gaston Ronco</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Julian Murua Onzaga</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Exequiel Gellner</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Stephan Zimmermann</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Juan Bordarampe</h3></div>
+                                <div><div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-40"><svg fill="currentColor" viewBox="0 0 24 24" class="w-5 h-5"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Dario Giordano</h3></div>
                             </div>
                         </div>
                     </div>
