Actualizar frase final en sección de Testigos

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <h2 class="serif italic text-2xl accent-color text-center mb-6">A nuestros Testigos</h2>
                             <div class="text-gray-700 font-light text-sm leading-relaxed space-y-4 text-justify serif">
                                 <p>Ustedes son testigos de nuestra historia mucho antes de este día. Su apoyo ha sido un ancla para nosotros en cada momento compartido.</p>
-                                <p>Gracias por sellar este compromiso en el corazón de nuestra familia por elección.</p>
+                                <p>Gracias por sellar este compromiso con el corazón en este día tan importante.</p>
                             </div>
                             <div class="grid grid-cols-2 gap-4 mt-8 text-center">
                                 <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#8BA889] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.03 (1).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Testigo 1]</h3></div>
