Diferenciar Testigos de Iglesia y Civil con nuevos iconos y nombres

--- a/index.html
+++ b/index.html
@@ -199,9 +199,23 @@
                                 <p>Ustedes son testigos de nuestra historia mucho antes de este día. Su apoyo ha sido un ancla para nosotros en cada momento compartido.</p>
                                 <p>Gracias por sellar este compromiso con el corazón en este día tan importante.</p>
                             </div>
-                            <div class="grid grid-cols-2 gap-4 mt-8 text-center">
-                                <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#8BA889] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.03 (1).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Testigo 1]</h3></div>
-                                <div><div class="w-16 h-16 mx-auto rounded-full border-2 border-[#8BA889] mb-2 overflow-hidden"><img src="imagenes/WhatsApp Image 2026-02-28 at 23.03.03 (2).jpeg" class="w-full h-full object-cover"></div><h3 class="serif text-[9px] accent-color">[Testigo 2]</h3></div>
+                            <div class="space-y-10 mt-10">
+                                <div>
+                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2">Testigos de Iglesia</p>
+                                    <div class="grid grid-cols-2 gap-4 text-center">
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Milagros Bustos</h3></div>
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Martin Saleme</h3></div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2">Testigos de Civil</p>
+                                    <div class="grid grid-cols-2 gap-4 text-center">
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Agostina Sobisch</h3></div>
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Santino Sobisch</h3></div>
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Camila Gellner</h3></div>
+                                        <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#8BA889] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,2L4.5,20.29L5.21,21L12,18L18.79,21L19.5,20.29L12,2Z"/></svg></div><h3 class="serif text-[9px] accent-color">Exequiel Gellner</h3></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
