Mejorar iconos: pluma más bonita para testigos y lavanda más grande para damas

--- a/index.html
+++ b/index.html
@@ -162,8 +162,11 @@
                         <div class="carta-bg p-6 rounded-sm relative">
                             <h2 class="serif italic text-2xl accent-color text-center mb-6">A mis Damas</h2>
                             <div class="text-gray-700 font-light text-sm leading-relaxed space-y-4 text-justify serif">
-                                <p>A mis amigas del alma y mi familia de corazón. Su existencia es el regalo más grande para mi alma.</p>
-                                <p>Gracias por caminar a mi lado en cada lágrima, en cada carcajada y en esta nueva etapa que hoy comienza.</p>
+                                <p>A mis amigas del alma y a mi familia. A quienes crecieron conmigo, a quienes llegaron después y se quedaron para siempre. Ustedes son mi historia, mi refugio y el amor que me sostuvo en cada etapa de mi vida.</p>
+                                <p>Gracias por caminar a mi lado en cada lágrima y en cada carcajada. Por abrazarme en los días difíciles, por impulsarme a ser valiente y por celebrar cada sueño como si fuera propio.</p>
+                                <p>Hoy comienza una nueva etapa, pero nada de lo que soy estaría completo sin ustedes. Porque antes de este “para siempre”, estuvieron ustedes. Siempre.</p>
+                                <p class="text-center italic mt-6 opacity-80">“I had the time of my life fighting dragons with you.”</p>
+                                <p class="text-center text-[10px] uppercase tracking-widest opacity-60">— Taylor Swift, Long Live</p>
                             </div>
                             <div class="grid grid-cols-2 gap-4 mt-8 text-center">
                                 <div><div class="w-10 h-10 mx-auto mb-2 flex items-center justify-center text-[#B19CD9] opacity-80"><svg fill="currentColor" viewBox="0 0 24 24" class="w-8 h-8"><path d="M12,22C12,22 13,19 13,17C13,15 12,14 12,14C12,14 11,15 11,17C11,19 12,22 12,22M12,12C12,12 13.5,10 13.5,8C13.5,6 12,5 12,5C12,5 10.5,6 10.5,8C10.5,10 12,12 12,12M12,10C12,10 13,8.5 13,7C13,5.5 12,4.5 12,4.5C12,4.5 11,5.5 11,7C11,8.5 12,10 12,10M12,8C12,8 13,6.5 13,5C13,3.5 12,2.5 12,2.5C12,2.5 11,3.5 11,5C11,6.5 12,8 12,8M12,6C12,6 13,4.5 13,3C13,1.5 12,0.5 12,0.5C12,0.5 11,1.5 11,3C11,4.5 12,6 12,6Z"/></svg></div><h3 class="serif text-[9px] accent-color">Agostina Sobisch</h3></div>
