--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
     <div id="leaf-container"></div>
 <div id="video-overlay">
-    <video id="bg-video-1" class="intro-bg-video" playsinline muted autoplay loop src="videos/video1.mp4"></video>
+    <video id="bg-video-1" class="intro-bg-video" playsinline muted autoplay></video>
+    <video id="bg-video-2" class="intro-bg-video" playsinline muted style="opacity: 0;"></video>
     <div class="fume-layer"></div>
     <div class="intro-ui">
         <div class="px-4">
