--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
                             </div>
                             <div class="space-y-10 mt-10">
                                 <div>
-                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2">Testigos de Iglesia</p>
+                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2 font-bold">Testigos de Iglesia</p>
                                     <div class="grid grid-cols-2 gap-4 text-center">
                                         <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.41,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.59,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/></svg></div><h3 class="serif text-[9px] accent-color">Milagros Bustos</h3></div>
                                         <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.41,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.59,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/></svg></div><h3 class="serif text-[9px] accent-color">Martin Saleme</h3></div>
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2">Testigos de Civil</p>
+                                    <p class="uppercase tracking-widest text-[10px] text-gray-400 mb-4 border-b border-gray-100 pb-2 font-bold">Testigos de Civil</p>
                                     <div class="grid grid-cols-2 gap-4 text-center">
                                         <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.41,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.59,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/></svg></div><h3 class="serif text-[9px] accent-color">Agostina Sobisch</h3></div>
                                         <div><div class="w-12 h-12 mx-auto mb-2 flex items-center justify-center text-[#5D3F75] opacity-60"><svg fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.41,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.59,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/></svg></div><h3 class="serif text-[9px] accent-color">Santino Sobisch</h3></div>
